# l3m-backend

./: .l3m-session  CLAUDE.md  COST.md  README.md  invoice.md  notes.md  pyproject.toml  standups.md
.claude/: cost-log.json
.sticky-notes/: 2601101820-mcp-tool-fix-summary-k9m.md
docs/: api-reference.md  architecture.md  cli-reference.md  code-review.md  configuration-reference.md  examples.md  hermes-toolcalling.md  hybrid-model-reset.md  index.md  installation.md  mcp-integration.md  standup-2025-01-08.md  standup-2025-01-09.md  standup-2025-01-10.md  test-report.md  tool-development.md  user-manual.md
docs/man/: l3m-chat.1  l3m-completion.1  l3m-download.1  l3m-tools.1
docs/plans/: 001-toolcall-module.md
docs/tldr/: l3m-chat.md  l3m-completion.md  l3m-download.md  l3m-init.md  l3m-tools.md
examples/mcp_server/: __init__.py  __main__.py
examples/mcp_server_http/: __init__.py  __main__.py
scripts/: chat-repl.sh  diagnose-chat.sh  diagnose-model.sh  diagnose-prompt-size.sh  diagnose-tokens.sh  download-gguf.sh  e2e_test_hermes.py  e2e_test_native.py  verify-tests.sh
src/l3m_backend/: __init__.py
src/l3m_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/l3m_backend/cli/: __init__.py  _magic.py  _repl.py  _simple_repl.py  chat_repl.py  completion.py  download.py  init.py  mcp_server.py  tools_cli.py
src/l3m_backend/cli/commands/: __init__.py  loader.py  registry.py
src/l3m_backend/cli/magic/: __init__.py  loader.py  registry.py
src/l3m_backend/config/: __init__.py  config.py
src/l3m_backend/core/: __init__.py  datamodels.py  decorators.py  exceptions.py  helpers.py  registry.py
src/l3m_backend/engine/: __init__.py  chat.py  context.py  contract.py  extraction.py  knowledge.py  legacy_priming.py  legacy_priming_default.yaml  similarity.py  toolcall.py
src/l3m_backend/mcp/: __init__.py  config.py  exceptions.py  logging.py
src/l3m_backend/scripts/: __init__.py  chat_repl.py  diagnose_chat.py  diagnose_model.py  diagnose_prompt_size.py  diagnose_tokens.py  download_gguf.py  verify_tests.py
src/l3m_backend/session/: __init__.py  data_models.py  manager.py
src/l3m_backend/tools/: __init__.py  _registry.py  _storage.py  loader.py
src/l3m_backend/utils/: __init__.py  gpu.py
tests/: __init__.py  conftest.py  test_backend.py  test_config.py  test_frontend.py  test_knowledge.py  test_session.py  test_similarity.py  test_toolcall.py  test_tools.py  test_user_tools.py
(+78 files in other folders)
